fixed too large image for hikes show page

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -53,6 +53,11 @@ body {
   padding: 10px;
 }
 
+.hike-item {
+  padding: 20px;
+  background-color: rgb(235, 233, 233);
+}
+
 @media only screen and (max-width: 600px) {
 
   .container {
